styles.css
html {
    font-family: 'Merriweather', serif;
    color: #141414;
    background-color: #EAE0D7;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.recipe, .recipe-archive {
    margin: 25px;
    width: 80%;
    max-width: 900px;
    padding: 30px 30px 30px 30px;
    background-color: #FCFAF9;
    border-radius: 3px;
    min-height: 400px;
}

.header-info {
    margin-bottom: 28px;
    margin-top: 0;
    font-size: 1em;
    font-style: italic;
    padding-bottom: 23px;
    padding-top: 0;
    border-bottom: 2px dashed #EAE0D7;
}

.footer-info {
    max-width: 900px;
    border-top: 2px dashed #EAE0D7;
    margin-top: 28px;
    margin-bottom: 30px;
    padding-bottom: 0;
    padding-top: 23px;
}

p.footer-link {
padding: 0 0 .5em 0;
margin: 0;
}

h1 {
    font-weight: 700;
    font-size: 2.7em;
    font-style: italic;
    font-family: 'Merriweather', serif;
    margin-bottom: 0;
    margin-top: .6em;
}

h2 {
    font-weight: 700;
    font-size: 1.4em;
    font-family: 'Merriweather', serif;
    margin-top: 1.3em;
    margin-bottom: .6em;
    padding: .35em .8em .35em .8em;
    text-align: center;
    max-width: fit-content;
    background-color: #ADDFEB;
    color: #333333;
    border-radius: 2px;
    font-style: italic;
}

p, ul, ol {
    font-weight: 400;
    font-size: 1.1em;
    font-family: 'Source Sans 3', sans-serif;
    margin-bottom: .8m;
    line-height: 1.2;
    margin-top: 1.2em;
}

p:last-of-type, li:last-of-type, p.footer-link:last-of-type {
    margin-bottom: 0;
    padding-bottom: 0;
}

ul, ol {
    padding: 0 0 0 25px;
}

ul {
    columns: 2;
    column-gap: 3em;
    break-inside: avoid;
}

li {
    padding-left: 2px;
    margin-bottom: .4em;
}

a {
    color: #141414;
    text-decoration: underline solid #ADDFEB 2px;
    font-style: italic;
    font-weight: 600;
    ;
}

a:hover {
    color: #333333;
    text-decoration: none;
    box-shadow: inset 0 -.6em 0 0 #ADDFEB;
    font-weight: bold;
    font-style: italic;
}

.archive-description {
    margin-top: .8em;
}

.recipe-image-container, .archive-image-container {
width: 100%;    height: 400px;
    border-radius: 3px;  
    overflow: hidden;
    position: relative;
    margin-top: 0;
    padding-top: 0;
}

.recipe-image, .archive-image {
    width: 100%; 
    height: 100%; 
    object-fit: cover;
    object-position: 100% 60%;
}

@media screen and (max-width: 768px) {

    .recipe, .recipe-archive {
        padding: 10px;
        background-color: #FCFAF9;
        min-height: 400px;
        margin: 0;
        border: none;
        width: auto;
    }

    html {
        margin: 0;
        padding: 0;
        background-color: #FCFAF9;
    }

    .recipe-image-container, .archive-image-container {
        height: 220px;
        margin-top: 0;
        padding-top: 0;

    }

}

